Big commit for the Kent ACM Demo. Adding new TileSets, slick for tiledmap, guava for awesomeness. Adding new DemoModule for demo specific work. Changes to get the demo up and running, as well as improvements on position data for entities.

--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,7 @@
 	<classpathentry kind="lib" path="lib/TWL.jar"/>
 	<classpathentry kind="lib" path="lib/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/artemis.jar"/>
+	<classpathentry kind="lib" path="lib/slick.jar"/>
+	<classpathentry kind="lib" path="lib/guava-14.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
