--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
 	<property name="res" location="res" />
 	<property name="doc" location="doc" />
 	<property name="native" location="native"/>
+	<property name="project.doc" location="${doc}${file.separator}stonetolb" />
 	
 	<property name="game.module" value="com.stonetolb.game.module.WorldModule" />
 
@@ -71,8 +72,16 @@
 		<jar jarfile="${dist}/lib/Stonetolb-${DSTAMP}.jar" basedir="${build}"/>
 	</target>
 
+	<target name="javadoc" description="Generates the Javadoc for this project">
+		<mkdir dir="${project.doc}"/>
+		<javadoc sourcepath="${src}" destdir="${project.doc}">
+			<classpath refid="stonetolb.classpath"/>
+		</javadoc>
+	</target>
+	
 	<target name="clean" description="Clean up">
 		<delete dir="${build}"/>
 		<delete dir="${dist}"/>
+		<delete dir="${project.doc}"/>
 	</target>
 </project>
