--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="res"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/Users/james.baiera/Play/workspace/Stonetolb/doc/commons-cli-1.2-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Stonetolb/doc/commons-cli-1.2-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/TWL.jar"/>
