--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jbox2d</groupId>
+            <artifactId>jbox2d</artifactId>
+            <version>2.1.2.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
