Some general code cleanup and adding tests. Corrected the jBox2D pom dependency. Started to deprecate the old collision stuff. For some reason after I package with Maven, Tiled can't find the source textures for the tile map in the DemoModule. Sadface.

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.stonetolb</groupId>
@@ -7,8 +7,10 @@
     <packaging>jar</packaging>
     <version>0.5-SNAPSHOT</version>
     <name>Stonetolb</name>
-    <description>Stonetolb is a Fantasy RPG. Stonetolb is built using LWJGL, Slick2D, and the Artemis ECS Framework. Stonetolb is currently unlicensed</description>
-    
+    <description>Stonetolb is a Fantasy RPG. Stonetolb is built using LWJGL, Slick2D, and the Artemis ECS Framework.
+        Stonetolb is currently unlicensed
+    </description>
+
     <properties>
         <finalName>${project.artifactId}-${project.version}.jar</finalName>
         <main.class>com.stonetolb.Stonetolb</main.class>
@@ -64,8 +66,14 @@
 
         <dependency>
             <groupId>org.jbox2d</groupId>
-            <artifactId>jbox2d</artifactId>
-            <version>2.1.2.2</version>
+            <artifactId>jbox2d-library</artifactId>
+            <version>2.2.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jbox2d</groupId>
+            <artifactId>jbox2d-serialization</artifactId>
+            <version>1.1.0</version>
         </dependency>
 
         <dependency>
